--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width">
-	<title>Construcciones la Paz</title>
+	<title>Barberia Alura</title>
 	<link rel="stylesheet" type="text/css" href="Style/reset.css">
 	<link rel="stylesheet" type="text/css" href="Style/style.css">	
  	<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@1,300&display=swap" rel="stylesheet">
