--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 				<ul>
 					<li><a href="index.html"> Inicio</a></li>
 					<li><a href="productos.html">Producto</a></li>
-					<li><a href="contactos.html">Contactos</a></li>
+					<li><a href="contactos.html">Contactos nuevos</a></li>
 				</ul>
 			</nav>
 		</div>
