--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 					<li><a href="index.html"> Inicio</a></li>
 					<li><a href="productos.html">Producto</a></li>
 					<li><a href="contactos.html">Contactos nuevos</a></li>
-					<li><a href="contactos.html">Contactos nuevos</a></li>
+					<li><a href="contactos.html">Hola</a></li>
 				</ul>
 			</nav>
 		</div>
