Corrigiendo productos-empresa

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 			<nav>
 				<ul>
 					<li><a href="index.html"> Inicio</a></li>
-					<li><a href="productos.html">Producto</a></li>
+					<li><a href="productos.html">Producto-empresa</a></li>
 					<li><a href="contactos.html">Contactos nuevos</a></li>
 					<li><a href="contactos.html">Hola</a></li>
 				</ul>
